[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
